# mini-state-machine

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  coverage.sh  docker-compose.yml  makefile  todo  todo.md
.github/workflows/: coverage.yml
data/: ddl.sql
migrations/2022-06-15-095352_add_states/: down.sql  up.sql
src/: main.rs  schema.rs
src/cores/: auth.rs  database.rs  env.rs  environment.rs  error.rs  errors.rs  http.rs  log.rs  mod.rs  test.rs
src/cores/auth/: role.rs
src/cores/database/: mod.rs  pg.rs
src/cores/database/data/: ddl.sql  dml.sql
src/cores/error/: mod.rs  service.rs  types.rs
src/cores/http/: entity.rs  middleware.rs  mod.rs
src/cores/http/middleware/: auth.rs  mod.rs  span.rs
src/services/: mod.rs  provider.rs
src/services/action/: mod.rs  model.rs
src/services/action/logic/: factory.rs  insert_to_retry.rs  mod.rs  run.rs  send.rs
src/services/action/model/: entity.rs  mod.rs
src/services/action/repo/: db.rs  db_query.rs  mod.rs
src/services/auth/: init.rs  logic.rs  mod.rs
src/services/auth/business/: authorize.rs  check_permission.rs  factory.rs  get_by_username.rs  insert.rs  is_permitted.rs  login.rs  mod.rs  token_validation.rs
src/services/auth/handler/: http.rs
src/services/auth/logic/: authorize.rs  factory.rs  generate_key.rs  get_by_username.rs  get_key.rs  insert.rs  (+3 more)
src/services/client/: mod.rs
src/services/diagram/: init.rs  mod.rs
src/services/order/: init.rs  mod.rs
src/services/state/: init.rs  mod.rs  model.rs  repo.rs
src/utils/: common.rs  mod.rs  test.rs  validation.rs
(+81 files in other folders)
