[package]
name = "order-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
chrono = { version = "0.4.19", features = ["serde"]}
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres","uuidv07", "r2d2", "chrono"]}
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = { version = "1.0.137", features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
