[package]
name = "order-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
chrono = { version = "0.4.21", features = ["serde"]}
derive_more = "0.99.17"
dotenv = "0.15.0"
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
r2d2 = "0.8.9"
serde = { version = "1.0.8", features = ["derive"]}
serde_derive = "1.0.9"
serde_json = "1.0.81"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
env_logger = "0.9.0"
log = "0.4.17"
async-trait = "0.1.57"
futures-util = "0.3.23"
uuid = { version = "1.1.2", features = ["v4"] }
tracing-appender = "0.2.2"
